--- a/BOOKWARM/Storyboard/BookCollectionViewCell.xib
+++ b/BOOKWARM/Storyboard/BookCollectionViewCell.xib
@@ -33,7 +33,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mNl-8d-zhq">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mNl-8d-zhq">
                                 <rect key="frame" x="113.66666666666669" y="60" width="113.33333333333331" height="159"/>
                             </imageView>
                         </subviews>
@@ -48,6 +48,7 @@
                             <constraint firstAttribute="bottom" secondItem="tyB-Yb-9yv" secondAttribute="bottom" constant="8" id="QVq-zl-ADN"/>
                             <constraint firstItem="mNl-8d-zhq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tyB-Yb-9yv" secondAttribute="trailing" constant="8" id="WqU-zz-nde"/>
                             <constraint firstItem="Xhb-Fw-FeR" firstAttribute="top" secondItem="oaN-DP-b6q" secondAttribute="top" constant="8" id="ayU-hN-g2i"/>
+                            <constraint firstItem="mNl-8d-zhq" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Xhb-Fw-FeR" secondAttribute="bottom" constant="8" id="hbu-1M-svg"/>
                             <constraint firstAttribute="trailing" secondItem="mNl-8d-zhq" secondAttribute="trailing" id="i4D-Pe-YEj"/>
                         </constraints>
                     </view>
